# openclaw-capture-skill

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
openclaw-capture/scripts/runtime/openclaw_capture_skill/: cli.py  config.py  server.py
scripts/: install_skill.sh
tests/: test_dispatcher_http.py  test_dispatcher_library.py  test_install_skill.py  test_notifiers.py  test_profiles.py  test_server.py
